<resources>
    <string name="app_name">Lubricadora </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login_recetas">Inicio de sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">116256795633137</string>
    <string name="fb_login_protocol_scheme">fb116256795633137</string>
    <string name="mensajeerrorconexion">error en conección, verifique si tiene acceso a internet.</string>
    <string name="welcome">Verificarémos tu cédula</string>
    <string name="sub_welcome"><![CDATA[<h2>FAST-DUTY.</h2>]]></string>
    <string name="sigup"><![CDATA[<h4>UBICANOS</h4>]]></string>
    <string name="promos"><![CDATA[<h4>PROMOCIONES</h4>]]></string>
    <string name="login">http://192.168.1.3:8000/datosCliente?cedula=</string>
    <string name="global_msg_internet_error">Revise su conexión de internet.</string>
    <string name="str_not_connection">Verificar conexión</string>
    <string name="vehicle_class">Clase de vehiculo</string>
    <string name="vehicle_description">Descripción</string>
    <string name="view_services">Ver servicios</string>
    <string name="brand">Mazda</string>
    <string name="color">Rojo</string>
    <string name="placa">HE770</string>
    <string name="posible_imagen_del_tipo_de_vehiculo_que_posee">Posible imagen del tipo de vehiculo que posee</string>
    <string name="lbl_required">Campo requerido</string>
    <string name="error_invalid_user">Usuario Invalido</string>
    <string name="title_activity_servicios">Servicios por Vehiculos</string>
    <string name="vision">
        "<b>VISIÓN.</b>\n\n"Promover diferentes servicios y convertirse en una empresa reconocida en el entorno, debido al asesoramiento personalizado a los clientes,no solo preocupándose por venderles un producto más bien con la aplicación correcta, por el bien de la comunidad y el medio ambiente."

    </string>
    <string name="mision">
        "<b>MISIÓN.</b>\n\nBrindarles cada día a nuestros clientes la satisfacción correcta a sus necesidades con productos y servicios de la más alta calidad; comprometida con la sostenibilidad del medio ambiente".
    </string>

</resources>
